# modularity-in-cpp-DragonoiMG

./: .gitignore
color-coding-system/: CMakeLists.txt  Makefile  README.md
color-coding-system/inc/: ColorCoder.h  ColorDefinitions.h  ColorPair.h  ReferenceManual.h
color-coding-system/src/: ColorCoder.cpp  ColorDefinitions.cpp  ColorPair.cpp  ReferenceManual.cpp  main.cpp
color-coding-system/tests/: ColorPairTests.cpp  ReferenceManualTests.cpp  TestRunner.cpp
